--- a/styles/single.css
+++ b/styles/single.css
@@ -1,6 +1,6 @@
 .line {
   background-color: var(--mars);
-  height: 4px;
+  height: 2px;
   border-radius: 0;
   width: 0;
   z-index: 999;
@@ -20,6 +20,14 @@
   width: 100% !important;
 }
 
+.single-post h3 {
+  font-family: "MartianMonoCondensed-Light";
+  font-size: var(--font-size-heading-3);
+  line-height: 1.2;
+  margin: var(--spacing-xxlarge) 0 0 0;
+  font-weight: 300;
+}
+
 .single-post img {
   width: 100%;
   height: auto;
@@ -27,69 +35,12 @@
   border-radius: 2px;
 }
 
-.single-post > ul {
-  margin: var(--spacing-large) 0;
-}
-
-.single-post ul,
-.single-post ol {
-  list-style-type: none;
-  padding: 0;
-}
-
-.single-post li {
-  font-family: "Charter-Regular";
-  font-size: var(--font-size-body);
-  line-height: 1.3;
-  margin: 0 0 0 var(--spacing-xmedium);
-  position: relative;
-  padding-bottom: var(--spacing-medium);
-}
-
-.single-post li ul li {
-  padding-top: var(--spacing-medium);
-  padding-bottom: 0;
-}
-
-.single-post li ol li {
-  padding: var(--spacing-medium) 0 0 var(--spacing-medium);
-}
-
-.single-post ul > li::before,
-.single-post ul > li ul li::before {
-  position: absolute;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  transform: translate(-135%, 15%);
-}
-
-.single-post ul > li::before,
-.single-post ul > li ul li::before {
-  content: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 4L10.59 5.41L16.17 11H4V13H16.17L10.59 18.59L12 20L20 12L12 4Z' fill='%23EE3E2B'/%3E%3C/svg%3E%0A");
-}
-
-.single-post ul > li ul li::before {
-  content: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z' fill='%23EE3E2B'/%3E%3C/svg%3E%0A");
-}
-
-.single-post ol {
-  list-style: none;
-
-  counter-reset: list;
-}
-
-.single-post ol > li {
-  counter-increment: num;
+.single-post .size-post-thumbnails {
   margin: 0;
 }
 
-.single-post ol > li::before {
-  counter-increment: list;
-  content: counters(list, ".") ". ";
-  color: var(--mars);
-  font-family: "Charter-Bold";
-  font-weight: 700;
+.single-post > ul {
+  margin: var(--spacing-large) 0;
 }
 
 .single-post > .category {
@@ -139,6 +90,10 @@ span.meta {
 }
 
 /* related posts */
+.related-posts {
+  margin: var(--spacing-xxlarge) 0 0 0;
+}
+
 .related-posts h2 {
   margin: 0 0 var(--spacing-xlarge) 0;
 }
